<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_text">Password:</string>
    <string name="login_text">Shoe Store Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="creating_account_text">Creating Account</string>
    <string name="login_in_with_existing_account">Login in with existing account</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text"><![CDATA[Welcome to our store! Discover the latest styles of brand name shoes for women, men & kids today.]]></string>
    <string name="instruction">Instruction</string>
    <string name="instruction_text">Find the shoes that you are interested, press the dertail button for more details!</string>
    <string name="shoe_list_button">Shoe List</string>
    <string name="shoe_describe">Nike sport shoe</string>
    <string name="information">This is the information button</string>
    <string name="list_of_shoes">List of Shoes</string>
    <string name="click_here_for_more_info">Click Here for more information</string>
    <string name="detail">Detail</string>
    <string name="click_for_more_info">Click for more information</string>
    <string name="shoe_name_edit">Shoe Name:</string>
    <string name="company">Company:</string>
    <string name="shoe_size">Shoe Size:</string>
    <string name="description_text">Description:</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="click_to_add_more_shoes">Click to add more shoes</string>
    <string name="description">Description</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="logout">Logout</string>
</resources>
