<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- I used Constraint layout because this layout is relatively complex with 4 text and edit views which align with each other
    ; also the buttons under it. Those structure is hard to implement using Linear layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_name_edit"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/shoe_name_edit"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextShoeName"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextShoeName"
            style="@style/editStyle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="textPersonName"
            android:text="@={shoe.name}"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextCompanyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/company_edit"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:text="@string/company"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextCompanyName"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextCompanyName"
            style="@style/editStyle"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:inputType="textPersonName"
            android:text="@={shoe.company}"
            app:layout_constraintBottom_toTopOf="@+id/editTextShoeSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/company_edit"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeName" />

        <TextView
            android:id="@+id/shoe_size_edit"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:text="@string/shoe_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextShoeSize"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextShoeSize"
            style="@style/editStyle"
            android:layout_margin="16dp"
            android:inputType="numberDecimal"
            android:text="@={``+ shoe.size}"
            app:layout_constraintBottom_toTopOf="@+id/editTextDescibe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_edit"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextCompanyName" />

        <TextView
            android:id="@+id/description_edit"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:text="@string/description"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextDescibe"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextDescibe"
            style="@style/editStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="text"
            android:text="@={shoe.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/description_edit"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeSize" />

        <TextView
            android:id="@+id/shoe_detail"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/shoe_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescibe" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>